--- a/contributors.html
+++ b/contributors.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/styles.css">
-  <title>Hacktoberfest</title>
+  <link rel="stylesheet" href="./css/contributors.css">
+  <title>Hacktoberfest - contributors</title>
 </head>
 <body>
 
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/contributors.js"></script>
 </body>
 </html>
