--- a/helpful-material.html
+++ b/helpful-material.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/styles.css">
-  <title>Hacktoberfest</title>
+  <link rel="stylesheet" href="./css/helpful-material.css">
+  <title>Hacktoberfest - helpful material</title>
 </head>
 <body>
 
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/helpful-material.js"></script>
 </body>
 </html>
