--- a/contributors.html
+++ b/contributors.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+    <ul>
+      <li><a href="https://github.com/richie-south">richie-south</a></li>
+      <li><a href="https://github.com/BennyCarlsson">BennyCarlsson</a></li>
+    </ul>
+
+
   <script src="./scripts/contributors.js"></script>
 </body>
 </html>
