--- a/contributors.html
+++ b/contributors.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,20 @@
   <link rel="stylesheet" href="./css/contributors.css">
   <title>Hacktoberfest - contributors</title>
 </head>
-<body>
 
-    <ul>
-      <li><a href="https://github.com/richie-south">richie-south</a></li>
-      <li><a href="https://github.com/BennyCarlsson">BennyCarlsson</a></li>
-    </ul>
+<body>
+  <div id="navbar">
+    <a href="./index.html">Home</a>
+    <a href="./contributors.html">Contributors</a>
+    <a href="./helpful-material.html">helpful Material</a>
+  </div>
+  <ul>
+    <li><a href="https://github.com/richie-south">richie-south</a></li>
+    <li><a href="https://github.com/BennyCarlsson">BennyCarlsson</a></li>
+  </ul>
 
 
   <script src="./scripts/contributors.js"></script>
 </body>
+
 </html>
