--- a/helpful-material.html
+++ b/helpful-material.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,14 @@
   <link rel="stylesheet" href="./css/helpful-material.css">
   <title>Hacktoberfest - helpful material</title>
 </head>
-<body>
 
+<body>
+  <div id="navbar">
+    <a href="./index.html">Home</a>
+    <a href="./contributors.html">Contributors</a>
+    <a href="./helpful-material.html">helpful Material</a>
+  </div>
   <script src="./scripts/helpful-material.js"></script>
 </body>
+
 </html>
