--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/index.css">
   <title>Hacktoberfest</title>
 </head>
-<body>
 
+<body>
+  <div id="navbar">
+    <a href="./index.html">Home</a>
+    <a href="./contributors.html">Contributors</a>
+    <a href="./helpful-material.html">helpful Material</a>
+  </div>
   <script src="./scripts/index.js"></script>
 </body>
+
 </html>
