--- a/contributors.html
+++ b/contributors.html
@@ -13,7 +13,7 @@
   <div id="navbar">
     <a href="./index.html">Home</a>
     <a href="./contributors.html">Contributors</a>
-    <a href="./helpful-material.html">helpful Material</a>
+    <a href="./helpful-material.html">Helpful Material</a>
   </div>
   <ul>
     <li><a href="https://github.com/richie-south">richie-south</a></li>
