--- a/helpful-material.html
+++ b/helpful-material.html
@@ -13,7 +13,7 @@
   <div id="navbar">
     <a href="./index.html">Home</a>
     <a href="./contributors.html">Contributors</a>
-    <a href="./helpful-material.html">helpful Material</a>
+    <a href="./helpful-material.html">Helpful Material</a>
   </div>
   <script src="./scripts/helpful-material.js"></script>
 </body>
