--- a/index.html
+++ b/index.html
@@ -15,7 +15,31 @@
     <a href="./contributors.html">Contributors</a>
     <a href="./helpful-material.html">Helpful Material</a>
   </div>
+  <div id="header">
+    <h1>Hacktoberfest</h1>
+    <h2>Some other text</h2>
+  </div>
+  <div id="content">
+    <div id="explainer-video">
+      <h3>Explainer video</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
+    </div>
+    <div id="other-videos">
+
+    </div>
+
+    <div id="rules">
+
+    </div>
+
+  </div>
+  <div id="footer">
+    <a href="https://github.com/lingonsaft">Github</a>
+    <a href="https://www.youtube.com/lingonsaft/">Youtube</a>
+    <a href="https://www.instagram.com/lingonsaftofficial/">Instagram</a>
+    <a href="https://twitter.com/lingonsaft1">Twitter</a>
+  </div>
   <script src="./scripts/index.js"></script>
 </body>
-
 </html>
