--- a/contributors.html
+++ b/contributors.html
@@ -15,13 +15,22 @@
     <a href="./contributors.html">Contributors</a>
     <a href="./helpful-material.html">Helpful Material</a>
   </div>
-  <ul>
-    <li><a href="https://github.com/richie-south">richie-south</a></li>
-    <li><a href="https://github.com/BennyCarlsson">BennyCarlsson</a></li>
-  </ul>
-
+  <div id="header">
+    <h1></h1>
+  </div>
+  <div id="content">
+    <ul>
+      <li><a href="https://github.com/richie-south">richie-south</a></li>
+      <li><a href="https://github.com/BennyCarlsson">BennyCarlsson</a></li>
+    </ul>
+  </div>
+  <div id="footer">
+    <a href="https://github.com/lingonsaft">Github</a>
+    <a href="https://www.youtube.com/lingonsaft/">Youtube</a>
+    <a href="https://www.instagram.com/lingonsaftofficial/">Instagram</a>
+    <a href="https://twitter.com/lingonsaft1">Twitter</a>
+  </div>
 
   <script src="./scripts/contributors.js"></script>
 </body>
-
 </html>
