--- a/helpful-material.html
+++ b/helpful-material.html
@@ -15,6 +15,18 @@
     <a href="./contributors.html">Contributors</a>
     <a href="./helpful-material.html">Helpful Material</a>
   </div>
+  <div id="header">
+    <h1></h1>
+  </div>
+  <div id="content">
+
+  </div>
+  <div id="footer">
+    <a href="https://github.com/lingonsaft">Github</a>
+    <a href="https://www.youtube.com/lingonsaft/">Youtube</a>
+    <a href="https://www.instagram.com/lingonsaftofficial/">Instagram</a>
+    <a href="https://twitter.com/lingonsaft1">Twitter</a>
+  </div>
   <script src="./scripts/helpful-material.js"></script>
 </body>
 
