--- a/helpful-material.html
+++ b/helpful-material.html
@@ -16,10 +16,22 @@
     <a href="./contributors.html">Contributors</a>
   </div>
   <div id="header">
-    <h1></h1>
+    <h1>Helpful Material</h1>
   </div>
   <div id="content">
+    <h2>Other Projects</h2>
+    <ul>
+    </ul>
+    <h2>Helpful Links</h2>
+    <ul>
+      <li><a href="https://hacktoberfest.digitalocean.com/">Hacktoberfest</a></li>
+      <li><a href="https://hacktoberfestchecker.herokuapp.com/">Hacktoberfest Checker</a></li>
 
+    </ul>
+    <h2>Guides</h2>
+    <ul>
+      <li><a href="http://rogerdudler.github.io/git-guide/">Git Guide</a></li>
+    </ul>
   </div>
   <div id="footer">
     <a href="https://github.com/lingonsaft">Github</a>
