--- a/index.html
+++ b/index.html
@@ -16,19 +16,50 @@
     <a href="./contributors.html">Contributors</a>
   </div>
   <div id="header">
-    <h1>Hacktoberfest</h1>
+    <h1>Hacktoberfest 2018</h1>
     <h2>Some other text</h2>
   </div>
   <div id="content">
     <div id="explainer-video">
-      <h3>Explainer video</h3>
+      <h3>Hacktoberfest Intro</h3>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
         allowfullscreen></iframe>
     </div>
     <div id="other-videos">
+      <h3>How to pull request [Overview]</h3>
+      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
 
+
+      <h3>Making changes / Project Structure</h3>
+      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
+
+      <h3>Merge Conflict</h3>
+      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
+
+
+      <h3>Got a comment on my pull request. So what now?</h3>
+      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
+
+
+      <h3>Forking and Cloning</h3>
+      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
+
+
+      <h3>Commit, Push and PR</h3>
+      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
     </div>
-
+    <div id="contribution-rules">
+      <h3>Contribution Rules</h3>
+    </div>
+    <div id="faq">
+      <h3>FAQ</h3>
+    </div>
     <div id="rules">
 
     </div>
