--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
   <title>Hacktoberfest</title>
 </head>
 
@@ -59,6 +59,7 @@
     </div>
     <div id="faq">
       <h3>FAQ</h3>
+      <p>Are you not the guys from that failed kickstarter? </p>
     </div>
     <div id="rules">
 
