--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="./contributors.html">Contributors</a>
   </div>
   <div id="header">
-    <h1>Hacktoberfest 2018</h1>
+    <h1>Hacktoberfest 2018 <a href="https://github.com/lingonsaft/hacktoberfest-test">(Github repo)</a></h1>
     <h2>Some other text</h2>
   </div>
   <div id="content">
