feat: git link header

--- a/contributors.html
+++ b/contributors.html
@@ -16,8 +16,8 @@
     <a href="./contributors.html">Contributors</a>
   </div>
   <div id="header">
-    <h1></h1>
-  </div>
+      <h1>Contributors <a href="https://github.com/lingonsaft/hacktoberfest-test">(Github repo)</a></h1>
+    </div>
   <div id="content">
     <ul>
       <li><a href="https://github.com/richie-south">richie-south</a></li>
