--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     </div>
     <div id="faq">
       <h3>FAQ</h3>
+      <p class="faq-question">Are you not the guys from that failed <a href="https://www.kickstarter.com/projects/lingonsaft/codecardcodingcards"
+          target="_blank">CodeCardCodingCards</a> kickstarter? </p>
+      <p class="faq-answer">yes..</p>
     </div>
     <div id="rules">
 
