--- a/index.html
+++ b/index.html
@@ -56,9 +56,50 @@
     </div>
     <div id="contribution-rules">
       <h3>Contribution Rules</h3>
+      <ul>
+        <li class="contribution-rules-item">
+          Project must work when openening index.html
+        </li>
+        <li class="contribution-rules-item">
+          Do NOT add any build steps e.g npm install (we want to keep this a simple static site)
+        </li>
+        <li class="contribution-rules-item">
+          Do NOT remove Videos, Rules, FAQ or any other helpful content.
+        </li>
+
+        <li class="contribution-rules-item">
+          You are allowed to make pull requests that breaks the rules. We just won't merge it ;)
+        </li>
+        <li class="contribution-rules-item">
+          You are allowed to change any style and structure however you want
+        </li>
+        <li class="contribution-rules-item">Styling can be pretty, ugly or stupid as long as it works</li>
+        <li class="contribution-rules-item">Add your name to the contributers.html file</li>
+        <li class="contribution-rules-item">Pull requests can be as small or as big as you want</li>
+      </ul>
     </div>
     <div id="faq">
       <h3>FAQ</h3>
+
+      <p class="faq-question">Who can contribute? </p>
+      <p class="faq-answer"> Anyone with a github account ;)
+      </p>
+
+      <p class="faq-question">Are you getting paid for this? </p>
+      <p class="faq-answer">Sadly no. But we think we should. This is 100% unofficial and we do it for fun, fame and glory.
+      </p>
+
+      <p class="faq-question">Who are you and why are you doing this? </p>
+      <p class="faq-answer">We are two programmers from Sweden <a href="https://github.com/richie-south" target="_blank">Richard</a>
+        and <a href="https://github.com/BennyCarlsson" target="_blank">Benny</a>. We are doing this because we love open
+        source and Hacktoberfest. We want to make it easier for people to get started with Hacktoberfest and Open source.
+      </p>
+
+      <p class="faq-question">Why are you not using digitalocean? </p>
+      <p class="faq-answer">Because we only know javascript and suck at servers. We use <a href="https://zeit.co/now" target="_blank">now</a>
+        instead.
+      </p>
+
       <p class="faq-question">Are you not the guys from that failed <a href="https://www.kickstarter.com/projects/lingonsaft/codecardcodingcards"
           target="_blank">CodeCardCodingCards</a> kickstarter? </p>
       <p class="faq-answer">yes..</p>
