--- a/index.html
+++ b/index.html
@@ -57,25 +57,26 @@
     <div id="contribution-rules">
       <h3>Contribution Rules</h3>
       <ul>
-        <li class="contribution-rules-item">
+        <li class="contribution-rules-item do">
           Project must work when openening index.html
         </li>
-        <li class="contribution-rules-item">
+        <li class="contribution-rules-item do">
+          You are allowed to make pull requests that breaks the rules. We just won't merge it ;)
+        </li>
+        <li class="contribution-rules-item dont">
           Do NOT add any build steps e.g npm install (we want to keep this a simple static site)
         </li>
-        <li class="contribution-rules-item">
+        <li class="contribution-rules-item dont">
           Do NOT remove Videos, Rules, FAQ or any other helpful content.
         </li>
 
-        <li class="contribution-rules-item">
-          You are allowed to make pull requests that breaks the rules. We just won't merge it ;)
-        </li>
-        <li class="contribution-rules-item">
+
+        <li class="contribution-rules-item do">
           You are allowed to change any style and structure however you want
         </li>
-        <li class="contribution-rules-item">Styling can be pretty, ugly or stupid as long as it works</li>
-        <li class="contribution-rules-item">Add your name to the contributers.html file</li>
-        <li class="contribution-rules-item">Pull requests can be as small or as big as you want</li>
+        <li class="contribution-rules-item do">Styling can be pretty, ugly or stupid as long as it works</li>
+        <li class="contribution-rules-item do">Add your name to the contributers.html file</li>
+        <li class="contribution-rules-item do">Pull requests can be as small or as big as you want</li>
       </ul>
     </div>
     <div id="faq">
