--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,10 +16,22 @@
   </div>
   <div id="header">
     <h1>Hacktoberfest 2018 <a href="https://github.com/lingonsaft/hacktoberfest-test">(Github repo)</a></h1>
-    <h2>Some other text</h2>
+    <h2>This is a project to help you with your hacktoberfest pull requests. If you don't know where to start feel free to the videos and read the contribution rules. Happy hacking <3 </h2>
   </div>
   <div id="content">
     <div id="explainer-video">
+      <div id="tips">
+        <p>Brain dead? Here are som tips on what to do!</p>
+        <ul>
+          <li>Styling on this page.</li>
+          <li>Update readme.</li>
+          <li>Add your own projects to the helpful material page.</li>
+          <li>Add helpful links/guides to the helpful material page.</li>
+        </ul>
+
+        <p>Alsow checkout the <a href="https://github.com/lingonsaft/hacktoberfest-test/issues">github issues</a> for what to do :)</p>
+      </div>
+
       <h3>Hacktoberfest Intro</h3>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
         allowfullscreen></iframe>
@@ -77,6 +88,7 @@
         <li class="contribution-rules-item do">Styling can be pretty, ugly or stupid as long as it works</li>
         <li class="contribution-rules-item do">Add your name to the contributers.html file</li>
         <li class="contribution-rules-item do">Pull requests can be as small or as big as you want</li>
+        <li class="contribution-rules-item do">Add any dependencies you want but please as CDN. Ex bootstrap, fonts </li>
       </ul>
     </div>
     <div id="faq">
