--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,20 +17,24 @@
   </div>
   <div id="header">
     <h1>Hacktoberfest 2018 <a href="https://github.com/lingonsaft/hacktoberfest-test">(Github repo)</a></h1>
-    <h2>This is a project to help you with your hacktoberfest pull requests. If you don't know where to start feel free to the videos and read the contribution rules. Happy hacking <3 </h2>
+    <h2>This is a project to help you with your hacktoberfest pull requests. If you don't know where to start feel free to
+      the videos and read the contribution rules. Happy hacking
+      <3 </h2>
   </div>
   <div id="content">
     <div id="explainer-video">
       <div id="tips">
-        <p>Brain dead? Here are som tips on what to do!</p>
+        <p>Here are som tips on what to do!</p>
         <ul>
-          <li>Styling on this page.</li>
-          <li>Update readme.</li>
-          <li>Add your own projects to the helpful material page.</li>
-          <li>Add helpful links/guides to the helpful material page.</li>
+          <li>Style this page.</li>
+          <li>Add your own projects to the Helpful Material page.</li>
+          <li>Add helpful links/guides to the Helpful Material page.</li>
+          <li>Update readme.md</li>
+          <li>Anything you want!</li>
         </ul>
 
-        <p>Alsow checkout the <a href="https://github.com/lingonsaft/hacktoberfest-test/issues">github issues</a> for what to do :)</p>
+        <p>Or checkout the <a href="https://github.com/lingonsaft/hacktoberfest-test/issues">github issues</a> for what to
+          do :)</p>
       </div>
 
       <h3>Hacktoberfest Intro</h3>
@@ -38,30 +43,6 @@
     </div>
     <div id="other-videos">
       <h3>How to pull request [Overview]</h3>
-      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
-
-
-      <h3>Making changes / Project Structure</h3>
-      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
-
-      <h3>Merge Conflict</h3>
-      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
-
-
-      <h3>Got a comment on my pull request. So what now?</h3>
-      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
-
-
-      <h3>Forking and Cloning</h3>
-      <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
-        allowfullscreen></iframe>
-
-
-      <h3>Commit, Push and PR</h3>
       <iframe width="280" height="175" src="https://www.youtube.com/embed/QpYJ8RtYiYE" frameborder="0" allow="autoplay; encrypted-media"
         allowfullscreen></iframe>
     </div>
