--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
   <div id="header">
     <h1>Hacktoberfest 2018 <a href="https://github.com/lingonsaft/hacktoberfest-test">(Github repo)</a></h1>
-    <h2>This is a project to help you with your hacktoberfest pull requests. If you don't know where to start feel free to
+    <h2>This is a project to help you with your hacktoberfest pull requests. If you don't know where to start feel free to watch
       the videos and read the contribution rules. Happy hacking
       <3 </h2>
   </div>
