--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
           <li>Add your own projects to the Helpful Material page.</li>
           <li>Add helpful links/guides to the Helpful Material page.</li>
           <li>Update readme.md</li>
-          <li>Anything you want!</li>
         </ul>
 
         <p>Or checkout the <a href="https://github.com/lingonsaft/hacktoberfest-test/issues">github issues</a> for what to
@@ -62,15 +61,8 @@
         <li class="contribution-rules-item dont">
           Do NOT remove Videos, Rules, FAQ or any other helpful content.
         </li>
-
-
-        <li class="contribution-rules-item do">
-          You are allowed to change any style and structure however you want
-        </li>
-        <li class="contribution-rules-item do">Styling can be pretty, ugly or stupid as long as it works</li>
+        <li class="contribution-rules-item do">Styling / code can be pretty, ugly or stupid, big or small as long as it works</li>
         <li class="contribution-rules-item do">Add your name to the contributers.html file</li>
-        <li class="contribution-rules-item do">Pull requests can be as small or as big as you want</li>
-        <li class="contribution-rules-item do">Add any dependencies you want but please as CDN. Ex bootstrap, fonts </li>
       </ul>
     </div>
     <div id="faq">
