--- a/contributors.html
+++ b/contributors.html
@@ -17,6 +17,7 @@
   </div>
   <div id="header">
       <h1>Contributors <a href="https://github.com/lingonsaft/hacktoberfest-test">(Github repo)</a></h1>
+      <h3>Add yourself to the list if you contribute</h3>
     </div>
   <div id="content">
     <ul>
