--- a/helpful-material.html
+++ b/helpful-material.html
@@ -20,18 +20,20 @@
   </div>
   <div id="content">
     <h2>Other Projects</h2>
+      <p>feel free to add any of your own projects</p>
     <ul>
     </ul>
     <h2>Helpful Links</h2>
     <ul>
       <li><a href="https://hacktoberfest.digitalocean.com/">Hacktoberfest</a></li>
       <li><a href="https://hacktoberfestchecker.herokuapp.com/">Hacktoberfest Checker</a></li>
-
     </ul>
+    <p>feel free to add any helpful links</p>
     <h2>Guides</h2>
     <ul>
       <li><a href="http://rogerdudler.github.io/git-guide/">Git Guide</a></li>
     </ul>
+    <p>feel free to add any guides</p>
   </div>
   <div id="footer">
     <a href="https://github.com/lingonsaft">Github</a>
