--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <a href="https://github.com/lingonsaft/hacktoberfest-test"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+  <a href="https://github.com/lingonsaft/hacktoberfest-test"><img style="position: absolute; top: 0; right: 0; border: 0;"
+      src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
   <div id="navbar">
     <a href="./index.html">Home</a>
     <a href="./helpful-material.html">Helpful Material</a>
@@ -18,8 +19,8 @@
   </div>
   <div id="header">
     <h1>Hacktoberfest 2018 <a href="https://github.com/lingonsaft/hacktoberfest-test">(Github repo)</a></h1>
-    <h2>This is a project to help you with your hacktoberfest pull requests. If you don't know where to start feel free to watch
-      the videos and read the contribution rules. Happy hacking
+    <h2>This is a beginner friendly project to help you get started with your hacktoberfest. If you don't know where to start
+      feel free to watch the videos and read the contribution rules. Happy hacking
       <3 </h2>
   </div>
   <div id="content">
@@ -69,7 +70,8 @@
       <h3>FAQ</h3>
 
       <p class="faq-question">Who can contribute? </p>
-      <p class="faq-answer"> Anyone with a github account ;)
+      <p class="faq-answer"> - Anyone with a github account and signed up for [hacktoberfest](https://hacktoberfest.digitalocean.com/)
+        :)
       </p>
 
       <p class="faq-question">Are you getting paid for this? </p>
